# imu

./: CMakeLists.txt  README.md  hmc5883L.h  main.cpp
app/cpp/: CMakeLists.txt  app.cpp  wss.h
app/web/: index.html
app/web/css/: main.css
app/web/js/: main.js
imu/: bno055.h  bno085.h
imu/sh2/: euler.c
